--- a/index.html
+++ b/index.html
@@ -1,8 +1,28 @@
 <html>
 <head>
-  <title>My github pages</title>
+  <link rel="manifest" href="./manifest.json">
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('./service-worker.js').then(function() { console.log('Service Worker Registered'); });
+   }
+  </script>
+  <title>Hello PWA.</title>
+  <style>
+    body {
+      text-align:center;
+      font-size: 40px;
+      vertical-align: middle;
+    }
+    .image {
+      width: 80%; 
+      margin: auto;
+      display: block;
+    }
+  </style>
 </head>
 <body>
-  <h1>My github pages</h1>
+  <h1>Hello PWA.</h1>
+  <img src="./pwa-logo.svg" alt="PWA logo" class="image" />
+  <a href="p.html">p.html</a>
 </body>
 </html>
