--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <h1>Hello PWA.</h1>
-  <img src="./pwa-logo.svg" alt="PWA logo" class="image" />
+  <img src="./home.png" alt="PWA logo" class="image" />
   <a href="p.html">p.html</a>
 </body>
 </html>
