--- a/p.html
+++ b/p.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <h1>p.html</h1>
-  <img src="./p-chan.jpg" alt="p-chan" class="image" />
+  <img src="./p.png" alt="p-chan" class="image" />
   <a href="index.html">index.html</a>
 </body>
 </html>
